KSENROLL-13987 - Updated to fix layout issues in mobile layout in Chrome & Safari
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@73748 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/courseCalendar.less
+++ b/ks-enroll-ui/src/main/angular/registration/app/styles/less/kscr/courseCalendar.less
@@ -106,7 +106,11 @@
 }
 
 
-// Course lanes
+// Course lane container
+.kscr-CourseCalendar-day-lane-wrap {
+}
+
+// Main lane element
 .kscr-CourseCalendar-day-lane {
     position: relative;
 
@@ -315,6 +319,13 @@
             margin-right: 0;
             text-align: center;
             width: auto;
+        }
+        &-lane-wrap {
+            height: 100%;
+            left: 0;
+            position: absolute;
+            top: 0;
+            width: 100%;
         }
         &-lane {
             .util-Grid-cell;
